--- a/B-Topic/index.html
+++ b/B-Topic/index.html
@@ -4,7 +4,7 @@
 <head>
     
     <meta charset="utf-8">
-    <meta http-equiv = "refresh" content = "1; url = https://www.NineNeins.com/blog" />
+    <meta http-equiv = "refresh" content = "1; url = https://9neinsg.github.io/NineNein/" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
