--- a/index.html
+++ b/index.html
@@ -29,5 +29,5 @@
             <footer id="footy"></footer>
         </div></main>
     <!--{MP} - MPB - MPBE - MPD(Dev)-->
-    <script src="./Frame/JS/MainPageDev.js" type="" async></script>
+    <script src="./Frame/JS/MainPageDev.js" async></script>
 </body></html>
