--- a/B-Topic/GreyingError/Code/FashCode.html
+++ b/B-Topic/GreyingError/Code/FashCode.html
@@ -72,6 +72,6 @@
 <!--Blog Frame Close -->
         </div></div>
     <!--MP - MPB - {MPBE} - MPD(Dev)-->
-        <script src="../../../Frame/JS/MainPageBlogExt.js" async></script>
+        <script src="../../../Frame/JS/MainPageDev.js" async></script>
 <!--Page Close -->
     </body></html>
