Css and Js Dir change

--- a/B-Topic/NatSoc/books.html
+++ b/B-Topic/NatSoc/books.html
@@ -6,10 +6,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>9Neins Library</title>
-        <style> @import url("../../../Frame/CSS/MainPage.css");</style>
+        <style> @import url("../../Frame/CSS/MainPage.css");</style>
     </head>
 <!-- Nav Starts -->  
     <body>
+        <!--Navigation -->
         <nav id="BEsiteNav" class="navbar navbar-default navbar-fixed-top"></nav>
         <header id="sitehead" aria-label="siteHead"></header>
 <!-- Blog Frame -->
@@ -38,6 +39,6 @@
 <!--Blog Frame Close -->
             </div></div>
     <!--MP - MPB - {MPBE} - MPD(Dev)-->
-    <script src="../../../Frame/JS/MainPageDev.js" async></script>
+    <script src="../../Frame/JS/MainPageDev.js" async></script>
 <!--Page Close -->
     </body></html>
