--- a/B-Topic/NatSoc/saints.html
+++ b/B-Topic/NatSoc/saints.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <!-- Header -->
     <head>
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>9Neins Saints</title>
-        <style> @import url("../../../Frame/CSS/MainPage.css");</style>
+        <style> @import url("../../Frame/CSS/MainPage.css");</style>
     </head>
 <!-- Nav Starts --> 
     <body>
@@ -39,6 +39,6 @@
 <!--Blog Frame Close -->
             </div></div>
         <!--MP - MPB - {MPBE} - MPD(Dev)-->
-        <script src="../../../Frame/JS/MainPageDev.js" async></script>
+        <script src="../../Frame/JS/MainPageDev.js" async></script>
 <!--Page Close -->
     </body></html>
