--- a/B-Topic/Tech/CryptoTalk.html
+++ b/B-Topic/Tech/CryptoTalk.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>FAQ : CryptoTalk</title>
-        <style> @import url("../../../Frame/CSS/MainPage.css");</style>
+        <style> @import url("../../Frame/CSS/MainPage.css");</style>
     </head>
 <!-- Nav Starts -->  
     <body>
@@ -15,7 +15,7 @@
         <header id="sitehead" aria-label="siteHead"></header>
 <!-- Blog Frame -->
         <div class="container-fluid">
-            <div aria-label="nolabel" class="col-MainX col-lg-MainL col-MainM col-sm-MainS">
+            <div class="col-MainX col-lg-MainL col-MainM col-sm-MainS">
 <!--Intro Starts -->
                 <section id="Tcryptoi" aria-label="TcryptoI"></section>
 <!--Main Content -->
@@ -36,6 +36,6 @@
 <!--Blog Frame Close -->
             </div></div>
     <!--MP - MPB - {MPBE} - MPD(Dev)-->
-    <script src="../../../Frame/JS/MainPageDev.js" async></script>
+    <script src="../../Frame/JS/MainPageDev.js" async></script>
 <!--Page Close -->    
         </body></html>
