--- a/B-Topic/Tech/SoftWare.html
+++ b/B-Topic/Tech/SoftWare.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Tech : SoftWare</title>
-        <style> @import url("../../../Frame/CSS/MainPage.css");</style>
+        <style> @import url("../../Frame/CSS/MainPage.css");</style>
     </head>
 <!-- Nav Starts -->  
     <body>
@@ -37,6 +37,6 @@
 <!--Blog Frame Close -->
             </div></div>
             <!--MP - MPB - {MPBE} - MPD(Dev)-->
-            <script src="../../../Frame/JS/MainPageDev.js" async></script>
+            <script src="../../Frame/JS/MainPageDev.js" async></script>
 <!--Page Close -->
         </body></html>
