--- a/B-Topic/Tech/HardWare.html
+++ b/B-Topic/Tech/HardWare.html
@@ -33,7 +33,7 @@
 <!-- Read More -->
                 <section id="hardw" aria-label="hardW" class="col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
 <!-- Footer -->
-                <footer id="BEfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
+                <footer id="Bnssfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
             </div></div>
         <!--MP - MPB - {MPBE} - MPD(Dev)-->
