--- a/B-Topic/Tech/CryptoTalk.html
+++ b/B-Topic/Tech/CryptoTalk.html
@@ -32,7 +32,7 @@
 <!--Read More -->
                 <section id="crypw" aria-label="crypW" class="col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
 <!-- Footer -->
-            <footer id="BEfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
+            <footer id="Bnssfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
             </div></div>
     <!--MP - MPB - {MPBE} - MPD(Dev)-->
