--- a/B-Topic/NatSoc/saints.html
+++ b/B-Topic/NatSoc/saints.html
@@ -35,7 +35,7 @@
 <!--Read More -->
                 <section id="saintw" aria-label="saintW" class="col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
 <!--Footer -->
-                <footer id="BEfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
+                <footer id="Bnssfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
             </div></div>
         <!--MP - MPB - {MPBE} - MPD(Dev)-->
