--- a/B-Topic/NatSoc/video.html
+++ b/B-Topic/NatSoc/video.html
@@ -38,7 +38,7 @@
 <!--Read More -->   
                 <section id="videow" aria-label="videoW" class="col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
 <!--Footer -->
-                <footer id="BEfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
+                <footer id="Bnssfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
             </div></div>
         <!--MP - MPB - {MPBE} - MPD(Dev)-->
