Foot Dir Change

--- a/B-Topic/NatSoc/books.html
+++ b/B-Topic/NatSoc/books.html
@@ -35,7 +35,7 @@
 <!--Read More -->
                 <section id="bookw" aria-label="bookW" class="col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
 <!--Footer -->
-                <footer id="Bfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
+                <footer id="Bnssfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
             </div></div>
     <!--MP - MPB - {MPBE} - MPD(Dev)-->
