--- a/B-Topic/Support/DylanRoof.html
+++ b/B-Topic/Support/DylanRoof.html
@@ -50,7 +50,7 @@
 <!--Read More -->
                 <section id="roofwp" aria-label="roofw" class="blog-content col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
 <!-- Footer -->
-                <footer id="BEfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
+                <footer id="Bnssfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
             </div></div>
     <!--MP - MPB - {MPBE} - MPD(Dev)-->
