--- a/B-Topic/NatSoc/books.html
+++ b/B-Topic/NatSoc/books.html
@@ -26,11 +26,9 @@
 <!--SideBars -->
                 <aside class="asidefixed">
                     <!--Topic -->
-                    <aside id="FAudSideBar" class="asidefixed_t col-SideX col-lg-SideL col-SideM col-sm-SideS m-15px-tb"></aside>
+                    <aside id="bookside" class="asidefixed_t col-SideX col-lg-SideL col-SideM col-sm-SideS m-15px-tb"></aside>
                     <!--Gab -->
                     <aside id="GabSSide" class="asidefixed_g col-SideX col-lg-SideL col-SideM col-sm-SideS m-15px-tb"></aside>
-                    <!--Git -->
-                    <aside id="GitSSide" class="asidefixed_gi col-SideX col-lg-SideL col-SideM col-sm-SideS m-15px-tb"></aside>
                 </aside>
 <!--Read More -->
                 <section id="bookw" aria-label="bookW" class="col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
