--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NineNeins</title>
-    <style> @import url("./Frame/CSS/MainPage.css");</style>  
-</head>
-<body>
-    <!-- Navigation -->
+<!-- Header -->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>NineNeins</title>
+        <style> @import url("./Frame/CSS/MainPage.css");</style>  
+    </head>
+<!-- Nav Starts --> 
+    <body>
+        <!--Navigation -->
     <nav id="siteNav" class="navbar navbar-default navbar-fixed-top"></nav>
-    <!-- Header -->
     <header id="sitehead" aria-label="siteHead"></header>
-    <main class="container-fluid">
+<!-- Blog Frame -->
+    <div class="container-fluid">
         <div class="col-MainX col-lg-MainL col-MainM col-sm-MainS">
-            <!-- Intro Section -->
+<!--Intro Starts -->
             <section id="homi" aria-label="HomI"></section>
             <!-- Home Section -->
-            <section id="home-md" aria-label="home-MD"></section>
+            <main id="home-md" aria-label="home-MD"></main>
             <!-- Promos -->
             <section id="patch" aria-label="Patch"></section>
-            <!--Read More-->
+<!--Read More-->
             <section id="homew" aria-label="homeW"></section>
-            <div class="panel-footy blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                <p class="section-heading text-muted">"For the vision is yet for an appointed time, <u>but at the end it shall speak, and not lie: though it tarry, wait for it; because it will surely come, it will not tarry.</u>"</p></div>
-            <!-- Footer -->
+<!-- Footer -->
             <footer id="footy"></footer>
-        </div></main>
+<!--Blog Frame Close -->
+        </div></div>
     <!--{MP} - MPB - MPBE - MPD(Dev)-->
     <script src="./Frame/JS/MainPage.js" async></script>
+<!--Page Close -->
 </body></html>
