--- a/blog.html
+++ b/blog.html
@@ -1,32 +1,32 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Blogs</title>
-    <style> @import url("./Frame/CSS/MainPage.css");</style>
-</head>
-<body>
-    <!-- Navigation -->
+<!-- Header -->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>The Blogs</title>
+        <style> @import url("./Frame/CSS/MainPage.css");</style>
+    </head>
+<!-- Nav Starts --> 
+    <body>
+        <!--Navigation -->
     <nav id="siteNav" class="navbar navbar-default navbar-fixed-top"></nav>
-    <!-- Header -->
     <header id="sitehead" aria-label="siteHead"></header>
-    <main class="container-fluid">
+<!-- Blog Frame -->
+    <div class="container-fluid">
         <div class="col-MainX col-lg-MainL col-MainM col-sm-MainS">
             <!-- Intro Section -->
             <section id="blogi" aria-label="blogI"></section>
             <!-- Blog Section -->
-            <section id="blog-m" aria-label="blog-M"></section>
-            <!-- Read More -->
+            <main id="blog-m" aria-label="blog-M"></main>
+<!-- Read More -->
             <section id="blogw" aria-label="blogW"></section>
-            <div class="panel-footy blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                <p class="section-heading text-muted">"Write and dont worry
-                    <u>the ones who like it are quiet and listening.</u>"</p></div>
-            <!-- Footer -->
+<!-- Footer -->
             <footer id="footy"></footer>
-        </div></main>
+<!--Blog Frame Close -->
+        </div></div>
     <!--{MP} - MPB - MPBE - MPD(Dev)-->
-    <script src="./Frame/JS/MainPageDev.js" async></script>
+    <script src="./Frame/JS/MainPage.js" async></script>
+<!--Page Close -->
 </body></html>
