--- a/B-Topic/FaqBlog.html
+++ b/B-Topic/FaqBlog.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FAQ Blog</title>
-    <style> @import url("../Frame/CSS/MainPage.css");</style>
-</head>
-
-<body>
-    <!-- Navigation -->
-    <nav id="BsiteNav" class="navbar navbar-default navbar-fixed-top"></nav>
-    <!-- Header -->
-    <header id="sitehead" aria-label="siteHead"></header>
-    <!-- Intro Section -->
-    <section id="faqblgi" aria-label="faqblgI"></section>
-    <!-- Blog Section -->
-    <section id="faqblgm" aria-label="faqblgM"></section>
-    <!-- Promos -->
-    <section id="patch" aria-label="Patch"></section>
-    <!-- Read More -->
-    <section id="blogw" aria-label="blogW"></section>
-    <!-- Footer -->
-    <footer id="Bfooty"></footer>
-    <script src="../Frame/JS/MainPageBlog.js" async></script>
-</body>
-</html>
+<!-- Header -->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>FAQ Blog</title>
+        <style> @import url("../Frame/CSS/MainPage.css");</style>
+    </head>
+<!-- Nav Starts -->
+    <body>
+        <!--Navigation -->
+        <nav id="BsiteNav" class="navbar navbar-default navbar-fixed-top"></nav>
+        <header id="sitehead" aria-label="siteHead"></header>
+<!-- Blog Frame -->
+        <div class="container-fluid">
+            <div class="col-MainX col-lg-MainL col-MainM col-sm-MainS"> 
+<!--Intro Starts -->
+                <section id="faqblgi" aria-label="faqblgI"></section>
+<!--Main Content -->  
+                <section id="faqblgm" aria-label="faqblgM"></section>
+                <!-- Promos -->
+                <section id="Bpatch" aria-label="FqPatch"></section>
+<!-- Read More -->
+                <section id="faqw" aria-label="faqW"></section>
+<!-- Footer -->
+                <footer id="Bfooty"></footer>
+<!--Blog Frame Close -->
+            </div></div>
+            <!--MP - {MPB} - MPBE - MPD(Dev)-->
+            <script src="../Frame/JS/MainPageBlog.js" async></script>
+<!--Page Close -->
+    </body></html>
