--- a/B-Topic/GreyingErrorBlog.html
+++ b/B-Topic/GreyingErrorBlog.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GreyingError Blog</title>
-    <style> @import url("../Frame/CSS/MainPage.css");</style>
-</head>
-
-<body>
-    <!-- Navigation -->
-    <nav id="BsiteNav" class="navbar navbar-default navbar-fixed-top"></nav>
-    <!-- Header -->
-    <header id="sitehead" aria-label="siteHead"></header>
-    <main class="container-fluid">
-        <div class="col-MainX col-lg-MainL col-MainM col-sm-MainS">   
-            <!-- Intro Section -->
-            <section id="greyeri" aria-label="greyerI"></section>
-            <!-- Blog Section -->
-            <section id="greyerm" aria-label="greyerM"></section>
-            <!-- Promos -->
-            <section id="Bpatch" aria-label="Patch"></section>
-            <!-- Read More -->
-            <section id="blogw" aria-label="blogW"></section>
-            <div class="panel-footy blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                <p class="section-heading text-muted">"A singularity is but the word of God<br><u> which renders everything simply and predictive. The formula of nature to obey or deaf.<wbr></u>"</p></div>
-            <!-- Footer -->
-            <footer id="Bfooty"></footer>
-        </div></main>
-    <!--MP - {MPB} - MPBE - MPD(Dev)-->
-    <script src="../Frame/JS/MainPageDev.js" async></script>
-</body></html>
+<!-- Header -->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>GreyingError Blog</title>
+        <style> @import url("../Frame/CSS/MainPage.css");</style>
+    </head>
+<!-- Nav Starts -->
+    <body>
+        <!--Navigation -->
+        <nav id="BsiteNav" class="navbar navbar-default navbar-fixed-top"></nav>
+        <header id="sitehead" aria-label="siteHead"></header>
+<!-- Blog Frame -->
+        <div class="container-fluid">
+            <div class="col-MainX col-lg-MainL col-MainM col-sm-MainS"> 
+<!--Intro Starts -->
+                <section id="greyeri" aria-label="greyerI"></section>
+<!--Main Content -->                
+                <section id="greyerm" aria-label="greyerM"></section> 
+                <!-- Promos -->
+                <section id="Bpatch" aria-label="GePatch"></section>
+<!-- Read More -->
+                <section id="greyw" aria-label="greyw"></section>
+<!-- Footer -->
+                <footer id="Bfooty"></footer>
+<!--Blog Frame Close -->
+            </div></div>
+            <!--MP - {MPB} - MPBE - MPD(Dev)-->
+            <script src="../Frame/JS/MainPageBlog.js" async></script>
+<!--Page Close -->
+    </body></html>
