Consolidated JS for Prod

--- a/B-Topic/NatSoc/arcade.html
+++ b/B-Topic/NatSoc/arcade.html
@@ -37,6 +37,6 @@
 <!--Blog Frame Close -->
             </div></div>
             <!--MP - MPB - {MPBE} - MPD(Dev)-->
-            <script src="../../Frame/JS/MainPageDev.js" async></script>
+            <script src="../../Frame/JS/MainPageBlogExt.js" async></script>
 <!--Page Close -->
     </body></html>
