--- a/B-Topic/Tech/HardWare.html
+++ b/B-Topic/Tech/HardWare.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Tech : HardWare</title>
+        <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
         <style> @import url("../../Frame/CSS/MainPage.css");</style>
      </head>
 <!-- Nav Starts --> 
