--- a/B-Topic/GreyingError/Code/FashCode.html
+++ b/B-Topic/GreyingError/Code/FashCode.html
@@ -73,6 +73,6 @@
 <!--Blog Frame Close -->
         </div></div>
     <!--MP - MPB - {MPBE} - MPD(Dev)-->
-        <script src="../../../Frame/JS/MainPageDev.js" async></script>
+        <script src="../../../Frame/JS/MainPageFash.js" async></script>
 <!--Page Close -->
     </body></html>
