--- a/B-Topic/GreyingError/LNST/TimeLine.html
+++ b/B-Topic/GreyingError/LNST/TimeLine.html
@@ -48,6 +48,6 @@
                 <footer id="BEfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
         </div></div>
-        <script src="../../../Frame/JS/MainPageDev.js" async></script>
+        <script src="../../../Frame/JS/MainPageFash.js" async></script>
 <!--Page Close -->
     </body></html>
