Syp/Timeline Format/Clean

--- a/B-Topic/GreyingError/LNST/TimeLine.html
+++ b/B-Topic/GreyingError/LNST/TimeLine.html
@@ -19,8 +19,9 @@
 <!--Intro Starts -->
                 <section id="timelnsti" aria-label="timelnstI"></section>
 <!--Main Content -->
-                <main aria-label="timelnstM" class="col-ContX col-lg-ContL col-ContM col-sm-ContS">
-                    <section aria-label="timelinecovered" class="comment-content panel-body">
+                <main aria-label="timelnstTop" class="panel-body col-ContX col-lg-ContL col-ContM col-sm-ContS">
+                    <div class="panel panel-default">
+                        <section id="timelnstm" aria-label="timelnstM"></section>
                         <section id="SkyWard"></section>
                         <section id="LinkA"></section>
                         <section id="WindWake"></section>
@@ -35,8 +36,7 @@
                         <section id="Twilight"></section>
                         <section id="FSA"></section>
                         <section id="TimeSplit"></section>
-                    </section>
-                </main>
+                </div></main>
 <!--SideBars -->
                 <aside class="asidefixed">
                     <!--Topic -->
