Css Reduction Clean

--- a/B-Topic/GreyingError/Audio/FashAlong.html
+++ b/B-Topic/GreyingError/Audio/FashAlong.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Music : FashAlong</title>
         <link rel="shortcut icon" type="image/x-icon" href="../../../favicon.ico">
-        <style> @import url("../../../Frame/CSS/MainPage.css");</style>
+        <style> @import url("../../../Frame/CSS/Core/NeinMainPro.css");</style>
     </head>
 <!-- Nav Starts --> 
     <body>
@@ -25,11 +25,7 @@
                         <section id="fashaudilanga" aria-label="AudLang"></section>
 <!--ProTools Section-->
                         <section id="ProTMenu" aria-label="Protools Menu"></section>
-                        <div id="ProTj" class="panel-collapse collapse">
-                            <section id="ProT" aria-label="ProOp"></section>
-                            <section id="ProPTDet" aria-label="ProDetails"></section>
-                            <section id="ProPTBund" aria-label="ProBundles"></section>
-                            <section id="ProPTDoc" aria-label="ProDocs"></section>
+
 <!--PlugIns Section-->
                         <section id="ProPMenu" aria-label="PluginMenu"></section>
                         <div id="ProWNFj" class="panel-collapse collapse">
@@ -60,7 +56,7 @@
                             <section id="ProNISoft" aria-label="NativeISoft"></section>
                             <section id="ProNISoftT" aria-label="NativeISoft2"></section>
                         </div>
-                    </div>
+                    
 <!--Lyrics Section-->
                     <section id="ProSFAMenu" aria-label="SongMenu"></section>
                     <!--Song Section-->
@@ -74,13 +70,11 @@
                     <aside id="GabSSide" class="asidefixed_g col-SideX col-lg-SideL col-SideM col-sm-SideS m-15px-tb"></aside>
                 </aside>
 <!--Closer-->
-                <section aria-label="nobla" class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                    <p>Content Creation is more than just producing something<br>
-                    It is having and knowing the tools to do anything.</p></section>
+                <section id="fashw" aria-label="fashW" class="col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
 <!-- Footer -->
                 <footer id="BEfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
-        </div></div>
+            </div></div>
         <script src="../../../Frame/JS/MainPageFash.js" async></script>
 <!--Page Close -->
     </body></html>
