--- a/B-Topic/GreyingError/Code/FashCode.html
+++ b/B-Topic/GreyingError/Code/FashCode.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Code : FashCode</title>
         <link rel="shortcut icon" type="image/x-icon" href="../../../favicon.ico">
-        <style> @import url("../../../Frame/CSS/MainPage.css");</style>
+        <style> @import url("../../../Frame/CSS/Core/NeinMainPro.css");</style>
     </head> 
 <!-- Nav Starts -->
     <body>
@@ -66,8 +66,7 @@
                     </aside>
                     <div class="clearfix"></div>
 <!--Closer-->
-                <div class="panel-footy blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                    <p class="section-heading text-muted">Content Creation is more than just producing something<br>It is knowing and having the tools to do anything.</p></div>
+                <section id="fashw" aria-label="fashW" class="col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
 <!-- Footer -->
                 <footer id="BEfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
