--- a/B-Topic/GreyingError/Graphic/FashPhoto.html
+++ b/B-Topic/GreyingError/Graphic/FashPhoto.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Graphic : FashPhoto</title>
         <link rel="shortcut icon" type="image/x-icon" href="../../../favicon.ico">
-        <style> @import url("../../../Frame/CSS/MainPage.css");</style>
+        <style> @import url("../../../Frame/CSS/Core/NeinMainPro.css");</style>
     </head>
 <!-- Nav Starts -->  
     <body>
@@ -33,9 +33,7 @@
                     <aside id="GabSSide" class="asidefixed_g col-SideX col-lg-SideL col-SideM col-sm-SideS"></aside>
                 </aside>
 <!--Closer-->
-                <section aria-label="nobla" class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                    <p>Content Creation is more than just producing something<br>
-                    It is having and knowing the tools to do anything.</p></section>
+                <section id="fashw" aria-label="fashW" class="col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
 <!-- Footer -->
                 <footer id="BEfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
