--- a/B-Topic/Tech/CryptoTalk.html
+++ b/B-Topic/Tech/CryptoTalk.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>FAQ : CryptoTalk</title>
         <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
-        <style> @import url("../../Frame/CSS/MainPage.css");</style>
+        <style> @import url("../../Frame/CSS/Core/NeinMainPro.css");</style>
     </head>
 <!-- Nav Starts -->  
     <body>
