--- a/B-Topic/Tech/SoftWare.html
+++ b/B-Topic/Tech/SoftWare.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Tech : SoftWare</title>
         <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
-        <style> @import url("../../Frame/CSS/MainPage.css");</style>
-    </head>
+        <style> @import url("../../Frame/CSS/Core/NeinMainPro.css");</style>
+    </head> 
 <!-- Nav Starts -->  
     <body>
         <!--Navigation -->
