--- a/B-Topic/FaqBlog.html
+++ b/B-Topic/FaqBlog.html
@@ -6,30 +6,35 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>FAQ Blog</title>
-        <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
-        <style> @import url("../Frame/CSS/MainPage.css");</style>
+        <style> @import url("../../Frame/CSS/Core/NeinMainPro.css");</style>
     </head>
-<!-- Nav Starts -->
+<!-- Nav Starts -->  
     <body>
-        <!--Navigation -->
-        <nav id="BsiteNav" class="navbar navbar-default navbar-fixed-top"></nav>
+        <!-- Navigation -->
+        <nav id="BnssiteNav" class="navbar navbar-default navbar-fixed-top"></nav>
         <header id="sitehead" aria-label="siteHead"></header>
 <!-- Blog Frame -->
         <div class="container-fluid">
-            <div class="col-MainX col-lg-MainL col-MainM col-sm-MainS"> 
+            <div class="col-MainX col-lg-MainL col-MainM col-sm-MainS">
 <!--Intro Starts -->
                 <section id="faqblgi" aria-label="faqblgI"></section>
-<!--Main Content -->  
-                <section id="faqblgm" aria-label="faqblgM"></section>
-                <!-- Promos -->
-                <section id="Bpatch" aria-label="FqPatch"></section>
-<!-- Read More -->
-                <section id="faqw" aria-label="faqW"></section>
+<!--Main Content -->
+                <main id="faqblgm" aria-label="faqblgM" class="col-ContX col-lg-ContL col-ContM col-sm-ContS"></main>
+        <!-- Promos -->
+                <section id="patch" aria-label="Patch"></section>
+<!--SideBars -->
+                <aside class="asidefixed">
+                    <!--Topic -->
+                    <aside id="faqSide" class="asidefixed_t col-SideX col-lg-SideL col-SideM col-sm-SideS m-15px-tb"></aside>
+                    <!--Gab -->
+                    <aside id="GabSSide" class="asidefixed_g col-SideX col-lg-SideL col-SideM col-sm-SideS m-15px-tb"></aside>
+                </aside>
+<!--Read More -->
+                <section id="faqw" aria-label="faqW" class="col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
 <!-- Footer -->
-                <footer id="Bfooty"></footer>
+                <footer id="Bfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
-            </div></div>
-            <!--MP - {MPB} - MPBE - MPD(Dev)-->
-            <script src="../Frame/JS/MainPageBlog.js" async></script>
+        </div></div>
+    <script src="../Frame/JS/MainPageBLog.js" async></script>
 <!--Page Close -->
     </body></html>
