--- a/B-Topic/GreyingErrorBlog.html
+++ b/B-Topic/GreyingErrorBlog.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>GreyingError Blog</title>
         <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
-        <style> @import url("../Frame/CSS/MainPage.css");</style>
+        <style> @import url("../../Frame/CSS/Core/NeinMainPro.css");</style>
     </head>
 <!-- Nav Starts -->
     <body>
@@ -24,7 +24,7 @@
                 <!-- Promos -->
                 <section id="Bpatch" aria-label="GePatch"></section>
 <!-- Read More -->
-                <section id="greyw" aria-label="greyw"></section>
+                <section id="greyw" aria-label="gblogW" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></section>
 <!-- Footer -->
                 <footer id="Bfooty"></footer>
 <!--Blog Frame Close -->
