--- a/B-Topic/FaqBlog.html
+++ b/B-Topic/FaqBlog.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>FAQ Blog</title>
-        <style> @import url("../../Frame/CSS/Core/NeinMainPro.css");</style>
+        <style> @import url("../Frame/CSS/Core/NeinMainPro.css");</style>
     </head>
 <!-- Nav Starts -->  
     <body>
