--- a/B-Topic/FaqBlog.html
+++ b/B-Topic/FaqBlog.html
@@ -6,12 +6,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>FAQ Blog</title>
+        <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
         <style> @import url("../Frame/CSS/Core/NeinMainPro.css");</style>
     </head>
 <!-- Nav Starts -->  
     <body>
         <!-- Navigation -->
-        <nav id="BnssiteNav" class="navbar navbar-default navbar-fixed-top"></nav>
+        <nav id="BsiteNav" class="navbar navbar-default navbar-fixed-top"></nav>
         <header id="sitehead" aria-label="siteHead"></header>
 <!-- Blog Frame -->
         <div class="container-fluid">
@@ -34,7 +35,7 @@
 <!-- Footer -->
                 <footer id="Bfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
-        </div></div>
-    <script src="../Frame/JS/MainPageBLog.js" async></script>
+            </div></div>
+        <script src="../Frame/JS/MainPageBlog.js" async></script>
 <!--Page Close -->
     </body></html>
