Add Desk Wrapper

--- a/B-Topic/GreyingErrorBlog.html
+++ b/B-Topic/GreyingErrorBlog.html
@@ -26,7 +26,7 @@
 <!-- Read More -->
                 <section id="greyw" aria-label="gblogW" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></section>
 <!-- Footer -->
-                <footer id="Bfooty"></footer>
+                <footer id="Bfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
             </div></div>
             <!--MP - {MPB} - MPBE - MPD(Dev)-->
