Fash/NS Mobs Consolidated

--- a/B-Topic/GreyingError/Audio/FashAlong.html
+++ b/B-Topic/GreyingError/Audio/FashAlong.html
@@ -18,14 +18,18 @@
             <div class="col-MainX col-lg-MainL col-MainM col-sm-MainS">
 <!--Intro Starts -->
                 <section id="fashaudi" aria-label="fashaudiI"></section>
-<!--Main Content -->
-                <main class="col-ContX col-lg-ContL col-ContM col-sm-ContS" aria-label="fashaudiMob">
-                    <div class="b-content panel-body"> 
-                        <section id="fashaudiSU" aria-label="AudSetUp"></section>
+<!--Main Content --> 
+                <main id="audiom" class="col-ContX col-lg-ContL col-ContM col-sm-ContS" aria-label="fashaudiMob">
+<!--Top Page Intro-->
+                    <section aria-label="FashAudiTop" class="panel-body">  
+                        <div class="panel panel-default">
+<!--Sypnonsis/Setup-->
+                            <section id="fashaudmob" aria-label="CodeSetUp"></section>
+                            <section id="fashaudiSU" aria-label="AudSetUp"></section>
+
                         <section id="fashaudilanga" aria-label="AudLang"></section>
 <!--ProTools Section-->
                         <section id="ProTMenu" aria-label="Protools Menu"></section>
-
 <!--PlugIns Section-->
                         <section id="ProPMenu" aria-label="PluginMenu"></section>
                         <div id="ProWNFj" class="panel-collapse collapse">
@@ -61,7 +65,7 @@
                     <section id="ProSFAMenu" aria-label="SongMenu"></section>
                     <!--Song Section-->
                     <section id="SFASong" aria-label="SongsDetails"></section>
-                </div></main>
+                </div></section></main>
 <!--SideBars -->
                 <aside class="asidefixed">
                     <!--Topic -->
