--- a/B-Topic/GreyingError/Code/FashCode.html
+++ b/B-Topic/GreyingError/Code/FashCode.html
@@ -3,7 +3,7 @@
 <!-- Header -->
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Code : FashCode</title>
         <link rel="shortcut icon" type="image/x-icon" href="../../../favicon.ico">
@@ -17,30 +17,21 @@
         <div class="container-fluid">
             <div class="col-MainX col-lg-MainL col-MainM col-sm-MainS">
 <!--Intro Starts -->
-            <section id="fashcodei" aria-label="fashcodeI"></section>
+                <section id="fashcodei" aria-label="fashcodeI"></section>
 <!--Main Content -->
-            <main id="codeom" class="col-ContX col-lg-ContL col-ContM col-sm-ContS" aria-label="fashcodeMob">
-                <!--Top Page Intro-->
-                <section aria-label="CodeTop" class="panel-footy panel-default">
- 
-                    <section id="fashcodeSU" aria-label="FashCodeUp"></section>
-                    <section id="fashcodelangc" aria-label="FashLang"></section>
-                    <!--<section id="fashcodemob" aria-label="FashCi"></section>-->
+                <main class="col-ContX col-lg-ContL col-ContM col-sm-ContS" aria-label="fashcodeMob">
+                    <div class="b-content"> 
+<!--Top Page Intro-->
+                    <section aria-label="FashCodeTop" class="panel-body">
+                        <div class="panel panel-default">
+ <!--Sypnonsis/Setup-->
+                            <section id="fashcodmob" aria-label="CodeSetUp"></section>
+                            <section id="fashcodeSU" aria-label="CodeTools"></section>
 <!--HTML Section-->
-                    <section id="HTMLMenu" aria-label="HtmlMenu"></section>
-                    <div id="HTMLj" class="panel-collapse collapse">
-                        <section id="SyntaxMenu" aria-label="HSyntaxMenu"></section>
-                            <section id="SyntaxEntry" aria-label="SyntaxEntry"></section>
-                        <section id="EmmetSynMenu" aria-label="SEmmetMenu"></section>
-<!--Tags-->
-                        <section id="MostUsed" aria-label="MostUsed"></section>
-                        <section id="AllHTMLj" aria-label="HTMLJump"></section>
-                        <section id="AllHTML" aria-label="HtmlDetails"></section>
-                        <section id="HTMLEmmetj" aria-label="HEmmetJump"></section>
-                        <section id="EmmetHTML" aria-label="HEmmetDetails"></section></div>
+                            <section id="HTMLMenu" aria-label="HtmlMenu"></section>
 <!--CSS Section-->
-                    <section id="CSSMenu" aria-label="CSSMenu"></section>
-                    <div id="CSSj" class="panel-collapse collapse">
+                            <section id="CSSMenu" aria-label="CSSMenu"></section>
+
                         <section id="SyntaxCMenu" aria-label="CSyntaxMenu"></section>
                             <section id="SyntaxCEntry" aria-label="CSyntaxDetails"></section>
 <!--Properties-->
@@ -50,13 +41,22 @@
                         <section id="CSSEmmetj" aria-label="CEmmetJump"></section>
                         <section id="CSSEmmet" aria-label="CEmmetDetails"></section></div>
 <!--JS Section-->
+
+        <section class="comment-content">
+            <div>
+                <h5 class="bh tc">What better way to start a Audio Blog than Introductry and Free Stuff.</h5>
+                <p class="tc">Up above will cover (Setups) and provide all the things </p>
+                <p class="tc">Click Below for the Introductry to Audio itself.</p>
+            </div>
+        </section>
+
                     <section id="JSMenu" aria-label="JSMenu"></section>
                     <div id="JSj" class="panel-collapse collapse"></div>
                         <section class="comment-content">
                             <h5 class="bh">JS and Python are unforgivable languages unlike HTML and CSS.</h5>
                             <p class="tc">Like with HTML and CSS above I will attempt to show you the pattern.<br> JS will include Jquery. As Python will include 2/3, GDScript, and Renpy.</p>
                         </section>
-                    </section></main>
+                    </section></div></main>
 <!--SideBars -->
                     <aside class="asidefixed">
                         <!--Topic -->
@@ -70,7 +70,7 @@
 <!-- Footer -->
                 <footer id="BEfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
-        </div></div>
+            </div></div>
     <!--MP - MPB - {MPBE} - MPD(Dev)-->
         <script src="../../../Frame/JS/MainPageFash.js" async></script>
 <!--Page Close -->
