--- a/B-Topic/GreyingError/Graphic/FashPhoto.html
+++ b/B-Topic/GreyingError/Graphic/FashPhoto.html
@@ -19,12 +19,15 @@
 <!--Intro Starts -->
                 <section id="fashphoi" aria-label="fashphoI"></section>
 <!--Main Content -->
-                <main class="col-ContX col-lg-ContL col-ContM col-sm-ContS" aria-label="fashphoMob">
-                    <div class="b-content panel-body"> 
-                        <section id="fashphotoSU" aria-label="PSetUp"></section>
-                        <section id="fashphotolangg" aria-label="PLang"></section>
-                    </div>
-                </main>
+                <main id="phoom" class="col-ContX col-lg-ContL col-ContM col-sm-ContS" aria-label="fashphoMob">
+<!--Top Page Intro-->
+                    <section aria-label="FashPhotTop" class="panel-body">  
+                        <div class="panel panel-default">
+<!--Sypnonsis/Setup-->
+                            <section id="fashphomob" aria-label="CodeSetUp"></section>
+                            <section id="fashphotoSU" aria-label="PSetUp"></section>
+                            <section id="fashphotolangg" aria-label="PLang"></section>
+                </div></section></main>
 <!--SideBars -->
                 <aside class="asidefixed">
                     <!--Topic -->
