Code/Aud/Pho page Uploads

--- a/B-Topic/GreyingError/Audio/FashAlong.html
+++ b/B-Topic/GreyingError/Audio/FashAlong.html
@@ -24,48 +24,15 @@
                     <section aria-label="FashAudiTop" class="panel-body">  
                         <div class="panel panel-default">
 <!--Sypnonsis/Setup-->
-                            <section id="fashaudmob" aria-label="CodeSetUp"></section>
+                            <section id="fashaudmob" aria-label="AudSyp"></section>
                             <section id="fashaudiSU" aria-label="AudSetUp"></section>
-
-                        <section id="fashaudilanga" aria-label="AudLang"></section>
-<!--ProTools Section-->
-                        <section id="ProTMenu" aria-label="Protools Menu"></section>
 <!--PlugIns Section-->
-                        <section id="ProPMenu" aria-label="PluginMenu"></section>
-                        <div id="ProWNFj" class="panel-collapse collapse">
-                        <!--Waves Plug Section-->
-                            <section id="ProWBundMenu" aria-label="WavesMenu"></section>
-                            <section id="ProWDet" aria-label="WavesDetails"></section>
-                            <section id="ProWDoc" aria-label="WavesDocs"></section>
                             <section id="ProWBund" aria-label="WavesBundles"></section>
-                        <!--NI Plug Section-->
-                            <section id="ProNBundMenu" aria-label="NIMenu"></section>
-                            <section id="ProNDet" aria-label="NIDetails"></section>
-                            <section id="ProNDoc" aria-label="NIDocs"></section>
-                            <section id="ProNBund" aria-label="NIBundles"></section>
-                        <!--FF Plug Section-->
-                            <section id="ProFBundMenu" aria-label="FabMenu"></section>
-                            <section id="ProFDet" aria-label="FabDetails"></section>
-                            <section id="ProFDoc" aria-label="FabDocs"></section>
-                            <section id="ProFBund" aria-label="FabBundles"></section>
-                        <!--SSL Plug Section-->
-                            <section id="ProSSLBundMenu" aria-label="SSLMenu"></section>
-                            <section id="ProSSLDet" aria-label="SSLDetails"></section>
-                            <section id="ProSSLDoc" aria-label="SSLDocs"></section>
-                            <section id="ProSSLBund" aria-label="SSLBundles"></section>
-                        </div>
 <!--NI Section-->
-                        <section id="ProNIMenu" aria-label="NativeIMenu"></section>
-                        <div id="ProNIj" class="panel-collapse collapse">
-                            <section id="ProNISoft" aria-label="NativeISoft"></section>
-                            <section id="ProNISoftT" aria-label="NativeISoft2"></section>
-                        </div>
-                    
+                            <section id="ProNISoftT" aria-label="NativeISoft"></section>     
 <!--Lyrics Section-->
-                    <section id="ProSFAMenu" aria-label="SongMenu"></section>
-                    <!--Song Section-->
-                    <section id="SFASong" aria-label="SongsDetails"></section>
-                </div></section></main>
+                            <section id="SFASong" aria-label="SongsDetails"></section>
+                    </div></section></main>
 <!--SideBars -->
                 <aside class="asidefixed">
                     <!--Topic -->
@@ -73,12 +40,14 @@
                     <!--Gab -->
                     <aside id="GabSSide" class="asidefixed_g col-SideX col-lg-SideL col-SideM col-sm-SideS m-15px-tb"></aside>
                 </aside>
+                <div class="clearfix"></div>
 <!--Closer-->
                 <section id="fashw" aria-label="fashW" class="col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
 <!-- Footer -->
                 <footer id="BEfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
             </div></div>
+    <!--MP - MPB - {MPBE} - MPD(Dev)-->
         <script src="../../../Frame/JS/MainPageFash.js" async></script>
 <!--Page Close -->
     </body></html>
