--- a/B-Topic/GreyingError/Code/FashCode.html
+++ b/B-Topic/GreyingError/Code/FashCode.html
@@ -19,44 +19,20 @@
 <!--Intro Starts -->
                 <section id="fashcodei" aria-label="fashcodeI"></section>
 <!--Main Content -->
-                <main class="col-ContX col-lg-ContL col-ContM col-sm-ContS" aria-label="fashcodeMob">
-                    <div class="b-content"> 
+                <main id="codem" class="col-ContX col-lg-ContL col-ContM col-sm-ContS" aria-label="fashcodeMob">
 <!--Top Page Intro-->
                     <section aria-label="FashCodeTop" class="panel-body">
                         <div class="panel panel-default">
- <!--Sypnonsis/Setup-->
+<!--Sypnonsis/Setup-->
                             <section id="fashcodmob" aria-label="CodeSetUp"></section>
                             <section id="fashcodeSU" aria-label="CodeTools"></section>
 <!--HTML Section-->
                             <section id="HTMLMenu" aria-label="HtmlMenu"></section>
 <!--CSS Section-->
                             <section id="CSSMenu" aria-label="CSSMenu"></section>
-
-                        <section id="SyntaxCMenu" aria-label="CSyntaxMenu"></section>
-                            <section id="SyntaxCEntry" aria-label="CSyntaxDetails"></section>
-<!--Properties-->
-                        <section id="PropUsed" aria-label="PropUsed"></section>
-                        <section id="AllCSSj" aria-label="CSSJump"></section>
-                        <section id="AllCSS" aria-label="CSSDetails"></section>
-                        <section id="CSSEmmetj" aria-label="CEmmetJump"></section>
-                        <section id="CSSEmmet" aria-label="CEmmetDetails"></section></div>
 <!--JS Section-->
-
-        <section class="comment-content">
-            <div>
-                <h5 class="bh tc">What better way to start a Audio Blog than Introductry and Free Stuff.</h5>
-                <p class="tc">Up above will cover (Setups) and provide all the things </p>
-                <p class="tc">Click Below for the Introductry to Audio itself.</p>
-            </div>
-        </section>
-
-                    <section id="JSMenu" aria-label="JSMenu"></section>
-                    <div id="JSj" class="panel-collapse collapse"></div>
-                        <section class="comment-content">
-                            <h5 class="bh">JS and Python are unforgivable languages unlike HTML and CSS.</h5>
-                            <p class="tc">Like with HTML and CSS above I will attempt to show you the pattern.<br> JS will include Jquery. As Python will include 2/3, GDScript, and Renpy.</p>
-                        </section>
-                    </section></div></main>
+                            <section id="JSMenu" aria-label="JSMenu"></section>
+                    </div></section></main>
 <!--SideBars -->
                     <aside class="asidefixed">
                         <!--Topic -->
