--- a/B-Topic/GreyingError/Graphic/FashPhoto.html
+++ b/B-Topic/GreyingError/Graphic/FashPhoto.html
@@ -26,7 +26,13 @@
 <!--Sypnonsis/Setup-->
                             <section id="fashphomob" aria-label="CodeSetUp"></section>
                             <section id="fashphotoSU" aria-label="PSetUp"></section>
-                            <section id="fashphotolangg" aria-label="PLang"></section>
+<!--Downloading-->
+
+<!--Convert Section-->
+                            <section id="ConvertMenu" aria-label="Converty"></section>
+<!--Icon Section-->
+
+
                 </div></section></main>
 <!--SideBars -->
                 <aside class="asidefixed">
@@ -41,6 +47,7 @@
                 <footer id="BEfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
         </div></div>
+    <!--MP - MPB - {MPBE} - MPD(Dev)-->
         <script src="../../../Frame/JS/MainPageFash.js" async></script>
 <!--Page Close -->
     </body></html>
